src/System/RedPitaya/Rp.chs


-- | Sets user defined waveform
generatorArbWaveForm ::   Channel -> [CFloat] -> RpMonad ()
generatorArbWaveForm = mapr2 ( errorMap ft1) gawf
    where 
            gawf :: Channel -> [CFloat] -> IO RpError
            gawf c xs = (toEnum . fromIntegral) <$>
                setBufferHelper ({#call rp_GenArbWaveform #}
                ((fromIntegral . fromEnum) c)) xs


-- | Sets duty cycle of PWM signal.
generatorDutyCycle ::   Channel -> CFloat -> RpMonad ()
generatorDutyCycle = mapr2 ( errorMap ft1) rp_GenDutyCycle
{#fun rp_GenDutyCycle {`Channel' , `CFloat' } -> `RpError' #}

-- | Sets generation mode.
generatorMode ::   Channel -> GeneratorMode -> RpMonad ()
generatorMode = mapr2 ( errorMap ft1) rp_GenMode
{#fun rp_GenMode {`Channel' , `GeneratorMode' } -> `RpError' #}

-- | Sets number of generated waveforms in a burst. If -1 a continuous signal will be generated.
generatorBursts ::   Channel -> Integer -> RpMonad ()
generatorBursts = mapr2 ( errorMap ft1) rp_GenBurstCount
{#fun rp_GenBurstCount {`Channel' , fromInteger `Integer' } -> `RpError' #}

-- | Sets number of burst repetitions. This determines how many bursts will be generated.
-- If -1 a continuous signal will be generated.
generatorBurstsRepetitions ::   Channel -> Integer -> RpMonad ()
generatorBurstsRepetitions = mapr2 ( errorMap ft1) rp_GenBurstRepetitions
{#fun rp_GenBurstRepetitions {`Channel' , fromInteger `Integer' } -> `RpError' #}


-- | Sets the time/period of one burst in micro seconds. Period must be equal or greater then the time of one burst.
-- If it is greater than the difference will be the delay between two consequential bursts.
generatorBurstsPeriod ::   Channel -> Integer -> RpMonad ()
generatorBurstsPeriod = mapr2 ( errorMap ft1) rp_GenBurstPeriod
{#fun rp_GenBurstPeriod {`Channel' , fromInteger `Integer' } -> `RpError' #}

-- | Sets trigger source.
generatorTriggerSource ::   Channel -> TriggerSource -> RpMonad ()
generatorTriggerSource = mapr2 ( errorMap ft1) rp_GenTriggerSource
{#fun rp_GenTriggerSource {`Channel' , `TriggerSource' } -> `RpError' #}
